# ml-template

./: .flake8  .gitignore  README.md  environment.yaml  pyproject.toml
config/: ensemble.yaml  predict.yaml  train.yaml
config/blends/: total.yaml
config/data/: boosting.yaml  dataset.yaml  deep.yaml  mlp.yaml
config/experiment/: wandb.yaml
config/features/: store.yaml
config/generator/: featurize.yaml
config/models/: catboost.yaml  deep.yaml  lightgbm.yaml  mlp.yaml  tabnet.yaml  xgboost.yaml
notebook/: eda.ipynb
scripts/: run.sh  train.py
src/: ensemble.py  predict.py  train.py
src/data/: __init__.py  base.py  boosting.py  dataset.py  deep.py  mlp.py
src/features/: __init__.py  base.py  create.py  featurize.py
src/generator/: __init__.py  featurize.py
src/ml_template/data/: __init__.py
src/ml_template/models/: base.py  mlp.py
src/models/: __init__.py  base.py  boosting.py  deep.py  mlp.py  mlp_lightning.py  tree.py
src/models/nn/: __init__.py  tabnet.py
src/models/tree/: __init__.py  boosting.py
src/utils/: __init__.py  logger.py  metric.py  plot.py  utilies.py
